try to fix jumping desc v2

--- a/css/index.beer-carousel.css
+++ b/css/index.beer-carousel.css
@@ -116,18 +116,21 @@
             max-width: 100%;
             display: flex;
             flex-direction: row;
+            align-items: stretch;
             /* justify-content: center; */
 
             .beer-carousel__card {
                 display: flex;
                 flex: 1;
                 flex-direction: column;
+                justify-items: stretch;
                 min-width: 100%;
                 max-width: 100%;
                 padding: 0 15px;
 
                 @media (min-width: 768px) {
                     flex-direction: row;
+                    align-items: stretch;
                     min-width: 50%;
                 }
 
@@ -135,8 +138,10 @@
                     min-width: 50%;
                     max-width: 175px;
                     width: 100%;
+                    display: flex;
                     /* max-height: 350px; */
                     align-self: center;
+                    justify-content: center;
 
                     @media (min-width: 768px) {
                         min-width: 160px;
@@ -173,20 +178,25 @@
                 .beer-carousel__card-description {
                     padding: 47px 27px;
                     min-width: 50%;
-                    max-height: 600px;
+                    height: 100%;
+                    min-height: 320px;
+                    max-height: none;
                     overflow-wrap: break-word;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
+                    flex-grow: 1;
 
                     @media (min-width:768px) {
                         padding: 58px 28px;
                         max-height: 600px;
+                        min-height: 400px;
                     }
 
                     @media (min-width:992px) {
                         padding: 80px 30px;
                         max-height: 500px;
+                        min-height: 400px;
                     }
 
                     .beer-carousel__card-name {
